# Bloviate

./: .gitignore  ARCHITECTURE.md  INSTALL.md  INSTALL_BETA.md  LICENSE  PRODUCTION_READINESS.md  QUALITY_IMPROVEMENTS.md  QUICKSTART.md  README.md  SOLVING_BACKGROUND_SPEECH.md  STT_RESEARCH_2026-03-27.md  TALK_OUTLINE.md  TALK_SLIDES.md  config.yaml  custom_dictionary.example.yaml  custom_dictionary.yaml  personal_dictionary.example.yaml  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: smoke.yml
Formula/: bloviate.rb
src/: __init__.py  achievement_badge.py  achievement_catalog.py  achievement_service.py  achievement_store.py  app_paths.py  audio_capture.py  command_vocabulary.py  deepgram_stream.py  history_store.py  macos_permissions.py  main.py  model_registry.py  noise_suppressor.py  personal_dictionary.py  post_processor.py  ptt_handler.py  secret_store.py  settings_service.py  torchaudio_patch.py  transcriber.py  ui.py  ui_themes.py  voice_fingerprint.py  window_manager.py
src/bloviate_resources/: __init__.py  custom_dictionary.example.yaml  default_config.yaml  personal_dictionary.example.yaml
tests/: test_achievement_ui.py  test_achievements.py  test_audio_capture.py  test_bootstrap.py  test_cli.py  test_command_and_hotkeys.py  test_main_settings.py  test_noise_suppressor.py  test_production_services.py  test_transcriber_prompt_terms.py  test_transcriber_shutdown.py  test_ui_themes.py
